{
  "version": 4,
  "terraform_version": "0.15.2",
  "serial": 106,
  "lineage": "b53e16b8-bae6-c5c2-616c-f76534660a44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052bc34ebe97f099c",
            "domain": "vpc",
            "id": "eipalloc-0b53867a3126576fb",
            "instance": "i-06a66a375244a20ce",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0408b37c0e69ef3ae",
            "private_dns": "ip-10-0-0-36.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.36",
            "public_dns": "ec2-15-164-69-135.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.69.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.adminyd",
            "aws_security_group.yd-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_instance.yd-test-instance"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yd-test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba5cd124d7a79612",
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:instance/i-06a66a375244a20ce",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a66a375244a20ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "adminyd",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0408b37c0e69ef3ae",
            "private_dns": "ip-10-0-0-36.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.36",
            "public_ip": "15.164.69.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093372b20a2c16162",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833488a8fa5cc0c0",
            "tags": {
              "Name": "yd-test-instance"
            },
            "tags_all": {
              "Name": "yd-test-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018a72a407f340a12"
            ]
          },
          "dependencies": [
            "aws_key_pair.adminyd",
            "aws_security_group.yd-sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:internet-gateway/igw-0a985b557e4bcf104",
            "id": "igw-0a985b557e4bcf104",
            "owner_id": "285169994219",
            "tags": {
              "Name": "terraform-yd-igw"
            },
            "tags_all": {
              "Name": "terraform-yd-igw"
            },
            "vpc_id": "vpc-0138153eefb7ef7f1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a985b557e4bcf104",
            "id": "r-rtb-0ae315d3ff97fa1bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae315d3ff97fa1bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.public",
            "aws_vpc.main",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:route-table/rtb-0ae315d3ff97fa1bb",
            "id": "rtb-0ae315d3ff97fa1bb",
            "owner_id": "285169994219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a985b557e4bcf104",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-yd-rt-public"
            },
            "tags_all": {
              "Name": "terraform-yd-rt-public"
            },
            "vpc_id": "vpc-0138153eefb7ef7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea7554d010025a67",
            "route_table_id": "rtb-0ae315d3ff97fa1bb",
            "subnet_id": "subnet-0833488a8fa5cc0c0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yd-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:security-group/sg-018a72a407f340a12",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018a72a407f340a12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nodejs",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "yd-sg",
            "name_prefix": "",
            "owner_id": "285169994219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yd-sg"
            },
            "tags_all": {
              "Name": "yd-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0138153eefb7ef7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:subnet/subnet-0833488a8fa5cc0c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0833488a8fa5cc0c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285169994219",
            "tags": {
              "Name": "terraform-yd-public_subnet"
            },
            "tags_all": {
              "Name": "terraform-yd-public_subnet"
            },
            "vpc_id": "vpc-0138153eefb7ef7f1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:285169994219:vpc/vpc-0138153eefb7ef7f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b65a53ede5003f2",
            "default_route_table_id": "rtb-0b2986224e8e2a4e0",
            "default_security_group_id": "sg-0acc5a2075cfd3c14",
            "dhcp_options_id": "dopt-719ce91a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0138153eefb7ef7f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b2986224e8e2a4e0",
            "owner_id": "285169994219",
            "tags": {
              "Name": "terraform-yd"
            },
            "tags_all": {
              "Name": "terraform-yd"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}